[tool.poetry]
name = "tests"
version = "0.1.0"
description = "smaug tests"
authors = ["Chris Guida <chrisguida@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.12.1"
flake8 = "^7.0.0"
isort = "^5.13.2"

pre-commit = "^3.6.0"
pyln-testing = "^24.8.2"
pytest = "^7.1.2"
pytest-timeout = "^2.1.0"
pytest-xdist = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
